Support for class feature

--- a/wagtailcolourpicker/templates/colourpicker/forms/widgets/colour_option.html
+++ b/wagtailcolourpicker/templates/colourpicker/forms/widgets/colour_option.html
@@ -1,3 +1,8 @@
 {% include "django/forms/widgets/input.html" %}
+
 <label style="background: {{ widget.label }}" {% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %}></label>
-<div style="text-align: center;"><small>{{ widget.label }}</small></div>
+{% if widget.label|first in '.' %}
+<div class="{{ widget.label|slice:"1:" }}"><small>{{ widget.label }}</small></div>
+{% else %}
+<div style="color: {{ widget.label }};"><small>{{ widget.label }}</small></div>
+{% endif %}
