--- a/wagtailcolourpicker/templates/colourpicker/forms/widgets/colour_option.html
+++ b/wagtailcolourpicker/templates/colourpicker/forms/widgets/colour_option.html
@@ -1,8 +1,9 @@
 {% include "django/forms/widgets/input.html" %}
 
-<label style="background: {{ widget.label }}" {% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %}></label>
 {% if widget.label|first in '.' %}
-<div class="{{ widget.label|slice:"1:" }}"><small>{{ widget.label }}</small></div>
+<label class="background: bg-{{ widget.value }}" {% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %}></label>
+<div class="{{ widget.label|slice:"1:" }}"><small>{{ widget.value }}</small></div>
 {% else %}
-<div style="color: {{ widget.label }};"><small>{{ widget.label }}</small></div>
+<label style="background: {{ widget.label }}" {% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %}></label>
+<div style="color: {{ widget.label }};"><small>{{ widget.value }}</small></div>
 {% endif %}
